--- a/web/index.html
+++ b/web/index.html
@@ -26,11 +26,6 @@
       referrerpolicy="no-referrer"
   />
   <link href="default.css" rel="stylesheet" type="text/css"/>
-  <link
-      href="https://work.j832.com/feed.xml"
-      rel="alternate"
-      type="application/atom+xml"
-  />
   <link href="favicon.png" rel="shortcut icon"/>
   <script src="main.dart.js" defer></script>
   <link rel="canonical" href="https://kevmoo.com" />
@@ -72,5 +67,10 @@
     </td>
   </tr>
 </table>
+
+<p id="source-code">
+  <small>Source: <a href="https://github.com/kevmoo/kevmoo.com/">github.com/kevmoo/kevmoo.com</a></small>
+</p>
 </body>
 </html>
+
