Update social links

--- a/web/index.html
+++ b/web/index.html
@@ -51,14 +51,17 @@
         <a href="https://mastodon.social/@kevmoo" rel="me" title="mastodon.social/@kevmoo">
           <i class="fab fa-mastodon fa-2x"></i>
         </a>
+        <a href="https://bsky.app/profile/kevmoo.bsky.social" rel="me" title="kevmoo.bsky.social">
+          <i class="fab fa-bluesky fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/kevmoo/" rel="me" title="LinkedIn/kevmoo">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
         <a href="https://www.reddit.com/user/kevmoo" rel="me" title="Reddit/kevmoo">
           <i class="fab fa-reddit fa-2x"></i>
         </a>
         <a href="https://g.dev/kevmoo" rel="me" title="Google Developers">
           <i class="fab fa-google fa-2x"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/kevmoo/" rel="me" title="LinkedIn/kevmoo">
-          <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="https://twitter.com/kevmoo" rel="me" title="Twitter @kevmoo">
           <i class="fab fa-twitter fa-2x"></i>
