--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
         <a href="https://mastodon.social/@kevmoo" rel="me" title="mastodon.social/@kevmoo">
           <i class="fab fa-mastodon fa-2x"></i>
         </a>
-        <a href="https://bsky.app/profile/kevmoo.bsky.social" rel="me" title="kevmoo.bsky.social">
+        <a href="https://bsky.app/profile/kevmoo.com" rel="me" title="@kevmoo.com">
           <i class="fab fa-bluesky fa-2x"></i>
         </a>
         <a href="https://www.linkedin.com/in/kevmoo/" rel="me" title="LinkedIn/kevmoo">
