better title on bsky

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
         <a href="https://dart.dev">Dart</a>.
       </p>
       <p class="profiles">
-        <a href="https://bsky.app/profile/kevmoo.com" rel="me" title="@kevmoo.com">
+        <a href="https://bsky.app/profile/kevmoo.com" rel="me" title="Bluesky @kevmoo.com">
           <i class="fab fa-bluesky fa-2x"></i>
         </a>
         <a href="https://github.com/kevmoo/" rel="me" title="GitHub/kevmoo">
